config-root/namespaces/jx/jxboot-helmfile-resources/bucketrepo-ingress.yaml
# Source: jxboot-helmfile-resources/templates/700-bucketrepo-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: 'jxboot-helmfile-resources'
  name: bucketrepo
  namespace: jx
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: bucketrepo
                port:
                  number: 80
      host: bucketrepo-jx.51.105.116.5.nip.io
